# CertificationStudyCompanion

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_FIXES.md  README.md  TESTING.md
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-initialize-project-structure.md  1-2-set-up-react-vite-frontend.md  1-3-set-up-python-fastapi-backend.md  1-4-configure-tailwind-css.md  1-5-configure-testing-infrastructure.md  11-1-in-app-question-feedback-sidecar.md  11-2-write-mcq-feedback-revision.md  2-1-define-exercise-model-yaml-schema.md  2-2-implement-content-loader.md  2-3-implement-content-validation.md  2-4-implement-anki-export.md  2-5-implement-domain-tagging-filtering.md  4-1-create-code-completion-page-template-display.md  4-2-implement-code-tokenizer.md  4-3-implement-positional-feedback-algorithm.md  4-4-implement-feedback-tokens-rendering.md  4-5-implement-guess-limit-answer-reveal.md  4-6-code-completion-content-and-authoring-skill.md  4-7-exercise-type-filter.md  4-8-character-level-feedback-and-skip.md  6-1-match-count-endpoint-start-screen.md  6-2-session-by-ids-endpoint-replay.md  6-3-session-state-feedback-retention-back-skip.md  6-4-end-session-exit-confirm-home.md  6-5-progress-bar-navigation-keyboard.md  6-6-summary-review-and-replay.md  6-7-exam-filter-session-scoping.md  7-6-seen-before-indicator.md  8-1-session-countdown-timer.md  8-2-per-question-timing.md  8-3-mock-exam-builder-backend.md  8-4-mock-exam-flow-and-result.md  9-1-per-certification-config-model-loader.md  deferred-work.md  epic-2-code-review.md  epic-3-code-review.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  sprint-change-proposal-2026-06-10.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: anki.py  certifications.py  content.py  feedback.py  feedback_store.py  main.py  models.py  session.py  store.py
backend/tests/: conftest.py  test_anki.py  test_anki_endpoint.py  test_certifications.py  test_code_completion_content.py  test_code_completion_session.py  test_content.py  test_content_validation.py  test_count.py  test_exam_filter.py  test_exercise_feedback.py  test_feedback.py  test_feedback_store.py  test_filtering.py  test_health.py  test_mock_exam.py  test_models.py  test_session.py  test_sessions.py  test_sessions_post.py  test_stats.py  test_store.py
config/: certifications.yaml
exercises/associate/: code-completion-associate-batch-01.yaml  code-completion-associate-batch-02.yaml  code-completion-associate-batch-03.yaml  mcq-associate-batch-01.yaml  mcq-associate-batch-02.yaml  mcq-associate-cicd.yaml  mcq-associate-governance-security.yaml  mcq-associate-ingestion-lakeflow-connect.yaml  mcq-associate-lakeflow-jobs.yaml  mcq-associate-troubleshooting-monitoring.yaml
exercises/professional/: mcq-pro-cost-modelling-batch-02.yaml  mcq-pro-cost-modelling.yaml  mcq-pro-data-modelling-batch-02.yaml  mcq-pro-dev-code-batch-02.yaml  mcq-pro-dev-code.yaml  mcq-pro-monitoring-debug-batch-02.yaml  mcq-pro-monitoring-debug.yaml  mcq-pro-security-governance-sharing-batch-02.yaml  mcq-pro-security-governance-sharing.yaml  mcq-pro-transform-ingestion-batch-02.yaml  (+1 more)
frontend/: index.html  package.json  tailwind.config.js  vite.config.js  vitest.config.js
(+53 files in other folders)
