[project]
name = "databricks-de-cert-backend"
version = "0.1.0"
description = "Backend API for Databricks DE Certification Study Companion"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=1.10,<2.0",
    "python-dotenv>=1.0",
    "genanki>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "pyright>=1.1.410",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle (E/W), Pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests may have long lines (inline YAML fixtures) and intentional patterns.
"tests/**" = ["E501"]

[tool.pyright]
# app/ is type-checked strictly (basic mode). tests/ is included too but with
# the noisy rules relaxed (see executionEnvironments below): tests construct
# Pydantic-v1 models with string literals for enum fields and index
# `response.json()` — runtime-valid (Pydantic coerces) but pyright flags it.
# Relaxing only tests keeps app/ strict while making the workspace green.
include = ["app", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[[tool.pyright.executionEnvironments]]
root = "tests"
# tests import the top-level `app` package; add backend/ to the path so the
# import resolves (this env's root is tests/, not backend/).
extraPaths = ["."]
reportArgumentType = "none"
reportOptionalMemberAccess = "none"
reportOptionalOperand = "none"
reportOperatorIssue = "none"
reportOptionalSubscript = "none"
reportIndexIssue = "none"
reportCallIssue = "none"
reportGeneralTypeIssues = "none"
reportAttributeAccessIssue = "none"
